[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/spaceship.png" type="Texture" id=1]
[ext_resource path="res://src/ships/MovementController.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ships/GatheringComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ships/Spaceship.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 5.13028

[sub_resource type="CircleShape2D" id=3]
radius = 31.5274

[node name="Spaceship" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )

[node name="GatheringComponent" parent="." instance=ExtResource( 3 )]
CONTROLLING_NODE = NodePath("..")

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.23597, -4.12945 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.0589905, 1.90735e-06 )
shape = SubResource( 2 )

[node name="MovementController" parent="." instance=ExtResource( 2 )]
FAR_MAX_SPEED = 200.0

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 3 )

[node name="MinerDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 8
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
